--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "mongoose": "^8.19.2"
   },
   "devDependencies": {
