--- a/frontend/joLand/package.json
+++ b/frontend/joLand/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "framer-motion": "^11.2.10",
     "motion": "^12.23.24",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
